--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,10 +1,49 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center;">
-  <h1>Welcome to {{title}}!</h1>
-  <router-outlet></router-outlet>
-  <div>
-    <h3>Test Post Request</h3>
-    <button (click)="postData()">ClickMe :)</button>
-    <h5>Response: {{postRequestResponse}}</h5>
+<div class="container" [ngClass]="{'menu-layout-open': !toggleArroMenu}">
+  <div class="topbar">
+    <div class="topbar-left">
+      <h3>{{env.company}}</h3>
+      <h4>{{env.phone}}</h4>
+      <div class="arrow-menu" (click)="toggleArroMenu = !toggleArroMenu;">
+        <i class="pi pi-chevron-circle-right"></i>
+      </div>
+    </div>
+    <div class="topbar-right">RIGHT</div>
   </div>
+  <div class="wrap">
+    <div class="left-menu">
+      <div class="profile">
+        Gofman, David (52869)
+        <b>Account Balance:</b> <span>-7.75</span>
+      </div>
+    </div>
+    <div class="main">
+      <p-table [value]="cars">
+        <ng-template pTemplate="header">
+          <tr>
+            <th>Vin</th>
+            <th>Year</th>
+            <th>Brand</th>
+            <th>Color</th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-car>
+          <tr>
+            <td>{{car.vin}}</td>
+            <td>{{car.year}}</td>
+            <td>{{car.brand}}</td>
+            <td>{{car.color}}</td>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="footer" let-columns="columns">
+          <tr>
+            <td *ngFor="let col of columns">
+              {{col.header}}
+            </td>
+          </tr>
+        </ng-template>
+      </p-table>
+    </div>
+    <div class="layout-mask"></div>
+  </div>
+  <div class="footer">FOOTER</div>
 </div>
