create a dashboard page

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -12,8 +12,8 @@
   <div class="wrap">
     <div class="left-menu">
       <div class="profile">
-        Gofman, David (52869)
-        <b>Account Balance:</b> <span>-7.75</span>
+        {{user.lastname}}, {{user.firstname}} ({{user.id}})
+        <br><b>{{Locales.accountBalance}}:</b><span style="padding-left: 10px;">{{user.balance}}</span>
       </div>
     </div>
     <div class="main">
