--- a/client/src/styles.less
+++ b/client/src/styles.less
@@ -122,6 +122,7 @@ body {
 
         .profile {
             padding: 15px;
+            line-height: 25px;
             -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.15);
             -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.15);
             box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.15);
