lazy loading components

--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,8 @@
 <div class="container" [ngClass]="{'menu-layout-open': !toggleArroMenu}">
   <div class="topbar">
     <div class="topbar-left">
-      <h3>{{env.company}}</h3>
-      <h4>{{env.phone}}</h4>
+      <h3>{{company}}</h3>
+      <h4>{{phone}}</h4>
       <div class="arrow-menu" (click)="toggleArroMenu = !toggleArroMenu;">
         <i class="pi pi-chevron-circle-right"></i>
       </div>
