--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -45,5 +45,5 @@
     </div>
     <div class="layout-mask"></div>
   </div>
-  <div class="footer">FOOTER</div>
+  <app-footer></app-footer>
 </div>
