--- a/client/src/assets/styles.less
+++ b/client/src/assets/styles.less
@@ -21,6 +21,19 @@ body {
     background-color: #f4f3f8;
 }
 
+.p-filed {
+    margin-bottom: 1em;
+}
+
+.p-col-fixed {
+    margin: 0 0.5em 0.1em 0;
+    display: block;
+}
+
+.ui-button.ui-button-text {
+    padding: 0.429em 1em;
+}
+
 *,
 &:before,
 &:after {
@@ -50,7 +63,6 @@ body {
         h4 {
             margin: 0;
             padding: 3px;
-            text-align: center;
         }
 
         .topbar-left {
@@ -60,73 +72,21 @@ body {
             height: 100%;
             float: left;
         }
-
-        .topbar-right {
-            padding: 20px 0;
-            display: inline-block;
-            margin-left: 25px;
-            height: 100%;
-        }
-
-        .arrow-menu {
-            cursor: pointer;
-            position: absolute;
-            top: 15px;
-            right: -15px;
-            font-size: 25px;
-            z-index: 1;
-
-            &:hover {
-                color: #d8dae2;
-            }
-
-            &>i {
-                -moz-transition: all 0.3s;
-                -o-transition: all 0.3s;
-                -webkit-transition: all 0.3s;
-                transition: all 0.3s;
-            }
-        }
     }
 
     .topbar,
-    .footer {
+    app-footer {
         -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.25);
         -moz-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.25);
         box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.25);
     }
 
     .main,
-    .footer {
+    app-footer {
         -moz-transition: margin-left @menu-close-speed;
         -o-transition: margin-left @menu-close-speed;
         -webkit-transition: margin-left @menu-close-speed;
         transition: margin-left @menu-close-speed;
-    }
-
-    .left-menu {
-        -moz-transition: left @menu-close-speed;
-        -o-transition: left @menu-close-speed;
-        -webkit-transition: left @menu-close-speed;
-        transition: left @menu-close-speed;
-
-        position: absolute;
-        overflow: auto;
-        left: -@left-menu-width;
-        width: @left-menu-width;
-        top: @topbar-height;
-        bottom: 0;
-        border-right: 1px solid #cccccc;
-        z-index: 1;
-        background: #fff;
-
-        .profile {
-            padding: 15px;
-            line-height: 25px;
-            -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.15);
-            -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.15);
-            box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.15);
-        }
     }
 
     .wrap {
@@ -142,53 +102,14 @@ body {
         padding: 20px;
     }
 
-    .layout-mask {
-        display: none;
-        position: fixed;
-        width: 100%;
-        height: 100%;
-        background-color: #424242;
-        opacity: 0.7;
-        top: 0;
-        left: 0;
-    }
-
-    .footer {
+    app-footer {
+        display: block;
         height: @footer-height;
         padding: 15px 20px;
-    }
-}
 
-.container.menu-layout-open {
-    .arrow-menu>i {
-        -webkit-transform: rotate(-180deg);
-        -moz-transform: rotate(-180deg);
-        -o-transform: rotate(-180deg);
-        -ms-transform: rotate(-180deg);
-        transform: rotate(-180deg);
-    }
-
-    .left-menu {
-        left: 0;
-    }
-}
-
-@media (max-width: 1024px) {
-    .container.menu-layout-open {
-        .layout-mask {
-            display: block;
-        }
-    }
-}
-
-@media (min-width: 1025px) {
-    .container.menu-layout-open {
-        .main {
-            margin-left: @left-menu-width;
-        }
-
-        .footer {
-            margin-left: @left-menu-width;
+        .powerby {
+            float: right;
+            font-weight: bold;
         }
     }
 }
