--- a/client/src/app/authentication/auth.component.html
+++ b/client/src/app/authentication/auth.component.html
@@ -8,7 +8,7 @@
     <div class="wrap">
         <div class="main" [ngSwitch]="routerUrl">
             <form method="POST" [action]="actionUrl" class="dialog">
-                <input type="hidden" name="cid" [value]="clientId"/>
+                <input type="hidden" name="cid" [value]="clientId" />
                 <ng-template [ngSwitchCase]="'/login'">
                     <div class="p-filed ui-fluid">
                         <label class="p-col-fixed">{{Locales.userId}}</label>
@@ -19,7 +19,8 @@
                         <input type="password" class="ui-inputtext" name="passwd" required>
                     </div>
                     <a href="/reset">{{Locales.forgotPassword}}</a>
-                    <button class="ui-button ui-button-text" style="float: right" type="submit">{{Locales.login}}</button>
+                    <button class="ui-button ui-button-text" style="float: right"
+                        type="submit">{{Locales.login}}</button>
                     <div style="margin-top: 40px; text-align: center;">{{Locales.aggrement}}</div>
                 </ng-template>
                 <ng-template [ngSwitchCase]="'/reset'">
@@ -31,6 +32,17 @@
                 </ng-template>
             </form>
         </div>
+        <ul class="metars">
+            <li *ngFor="let key of metarAirports">
+                <a href="https://www.aviationweather.gov/metar/data?ids={{key}}&format=decoded&date=&hours=0&taf=on" target="_block" [title]="metars[key]?.raw || key">
+                    <div>
+                        <b [class]="metars[key]?.ctg">{{key}}</b>
+                        <span style="float: right">{{metars[key]?.date | date:'short' }}</span>
+                    </div>
+                    <div class="raw">{{metars[key]?.raw}}</div>
+                </a>
+            </li>
+        </ul>
     </div>
     <app-footer></app-footer>
 </div>
