--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -14,6 +14,7 @@
       <div class="profile">
         {{user.lastname}}, {{user.firstname}} ({{user.id}})
         <br><b>{{Locales.accountBalance}}:</b><span style="padding-left: 10px;">{{user.balance}}</span>
+        <br><a href="/login" style="text-decoration: underline; float: right">{{Locales.logout}}</a>
       </div>
     </div>
     <div class="main">
