--- a/client/src/app/dashboard/dashboard.less
+++ b/client/src/app/dashboard/dashboard.less
@@ -40,13 +40,14 @@
         overflow: auto;
         left: -@left-menu-width;
         width: @left-menu-width;
-        top: @topbar-height;
+        top: 0;
         bottom: 0;
         border-right: 1px solid #cccccc;
         z-index: 1;
         background: #fff;
 
         .profile {
+            overflow: auto;
             padding: 15px;
             line-height: 25px;
             -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.15);
