--- a/client/src/app/authentication/auth.component.less
+++ b/client/src/app/authentication/auth.component.less
@@ -3,8 +3,10 @@
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, .1), 0 8px 16px rgba(0, 0, 0, .1);
     padding: 20px;
+    width: 100%;
     max-width: 550px;
-    margin: 20px auto;
+    margin: 20px 50%;
+    transform: translate(-50%, 0);
     overflow: hidden;
 }
 
@@ -20,7 +22,6 @@
         width: 16%;
         padding: 5px 5px 0 5px;
         margin: 5px;
-        pointer-events: all;
 
         a {
             color: #fff;
