--- a/client/src/app/authentication/auth.component.html
+++ b/client/src/app/authentication/auth.component.html
@@ -121,9 +121,7 @@
                 </a>
             </li>
         </ul>
-        <div class="ui-dialog-mask ui-widget-overlay" #overlay>
-            <div class="app-loading"></div>
-        </div>
+        <app-overlay></app-overlay>
     </div>
     <app-footer></app-footer>
 </div>
