--- a/client/src/app/dashboard/dashboard.less
+++ b/client/src/app/dashboard/dashboard.less
@@ -1,5 +1,14 @@
 @import "../../assets/styles.less";
 
+label {
+    display: block;
+}
+
+.form-row {
+    display: inline-block;
+    margin-right: 10px;
+}
+
 .container {
     .topbar {
         .topbar-right {
