--- a/client/src/assets/styles.less
+++ b/client/src/assets/styles.less
@@ -114,7 +114,7 @@ a {
     }
 
     app-footer {
-        overflow: auto;
+        overflow: hidden;
         display: block;
         height: @footer-height;
         padding: 15px 20px;
