--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -13,45 +13,58 @@
     <div class="left-menu">
       <div class="profile">
         {{loggedUser.lastname}}, {{loggedUser.firstname}} ({{loggedUser.id}})
-        <br><b>{{Locales.accountBalance}}:</b><span style="padding-left: 10px;">{{loggedUser.currentAccount.balance | currency}}</span>
+        <br><b>{{Locales.accountBalance}}:</b><span
+          style="padding-left: 10px;">{{loggedUser.currentAccount.balance | currency}}</span>
         <br><a style="float: right" (click)="appService.logout()">{{Locales.logout}}</a>
       </div>
     </div>
     <div class="main">
-      <p-table [value]="users">
-        <ng-template pTemplate="header">
-          <tr>
-            <th>Id</th>
-            <th>Username</th>
-            <th>Firstname</th>
-            <th>Lastname</th>
-            <th>Email</th>
-            <th>Phone Number</th>
-            <th>Role</th>
-            <th>Is Active</th>
-            <th>Reset Password</th>
-          </tr>
+      <p-table [columns]="cols" [value]="users" [resizableColumns]="true" [scrollable]="true" [expandedRowKeys]="expandedRows" dataKey="id">
+        <ng-template pTemplate="colgroup" let-columns>
+          <colgroup>
+            <col [style.width.px]="45"/>
+            <col *ngFor="let col of cols" [style.width.px]="col.width"/>
+          </colgroup>
         </ng-template>
-        <ng-template pTemplate="body" let-user>
+        <ng-template pTemplate="header" let-columns>
           <tr>
-            <td>{{user.id}}</td>
-            <td>{{user.username}}</td>
-            <td>{{user.firstname}}</td>
-            <td>{{user.lastname}}</td>
-            <td>{{user.email}}</td>
-            <td>{{user.phonenumber}}</td>
-            <td>{{user.role}}</td>
-            <td>{{user.isActive}}</td>
-            <td>{{user.resetPassword}}</td>
-          </tr>
-        </ng-template>
-        <ng-template pTemplate="footer" let-columns="columns">
-          <tr>
-            <td *ngFor="let col of columns">
+            <th></th>
+            <th *ngFor="let col of columns" pResizableColumn>
               {{col.header}}
+            </th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-rowData let-columns="columns" let-expanded="expanded">
+          <tr>
+            <td>
+              <a href="#" [pRowToggler]="rowData">
+                <i [ngClass]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'"></i>
+              </a>
+            </td>
+            <td *ngFor="let col of columns" class="ui-resizable-column" [title]="formatData(col, rowData)">
+              {{formatData(col, rowData)}}
             </td>
           </tr>
         </ng-template>
+        <ng-template pTemplate="rowexpansion" let-rowData let-columns="columns">
+            <tr>
+          <td [attr.colspan]="columns.length + 1">
+            <form [formGroup]="frmGroup">
+              <div class="form-row" *ngFor="let col of columns">
+                <label [for]="col.field">{{col.header}}:</label>
+                <input class="ui-inputtext" [formControlName]="col.field">
+              </div>
+            </form>
+          </td>
+            </tr>
+          </ng-template>
+          <ng-template pTemplate="emptymessage" let-columns>
+            <tr>
+              <td [attr.colspan]="10">
+                {{Locales.tbl_Noitems}}
+              </td>
+            </tr>
+          </ng-template>
       </p-table>
     </div>
     <div class="layout-mask"></div>
