--- a/client/src/app/authentication/auth.component.less
+++ b/client/src/app/authentication/auth.component.less
@@ -33,19 +33,27 @@
 
         b.VFR {
             background: #32CD32;
-        };
+        }
+
+        ;
 
         b.MVFR {
             background: #0000CD;
-        };
+        }
+
+        ;
 
         b.IFR {
             background: #FF0000;
-        };
+        }
+
+        ;
 
         b.LIFR {
             background: #FF00FF;
-        };
+        }
+
+        ;
     }
 
     .raw {
